--- a/_data/dependencies.yml
+++ b/_data/dependencies.yml
@@ -6,3 +6,5 @@
   link: https://www.bootstraptoggle.com/
 - name: Font Awesome
   link: https://github.com/FortAwesome/Font-Awesome
+- name: PixiJS
+  link: https://www.pixijs.com/
