--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bootstrap-4-github-pages",
-  "description": "Description",
+  "name": "rainbow-paw-pads",
+  "description": "LGBT+ Rainbow Pixel-Paws",
   "version": "0.1.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/furudbat/bootstrap-4-github-pages.git"
+    "url": "https://github.com/furudbat/paw-rainbow.git"
   },
   "scripts": {
     "build": "browserify src/main.ts -p [ tsify ] -t [ envify --NODE_ENV production ] -t unassertify -t uglifyify -p common-shakeify | uglifyjs -cm > ./assets/js/app/bundle.min.js",
@@ -20,6 +20,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "localforage": "^1.9.0",
+    "pixi.js": "^5.3.6",
     "typescript-logger": "^2.0.1"
   },
   "devDependencies": {
@@ -29,7 +30,6 @@
     "@types/envify": "0.0.30",
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.13",
-    "@types/localforage": "0.0.34",
     "@types/node": "^14.14.10",
     "browser-pack-flat": "^3.4.2",
     "browserify": "^16.5.2",
