--- a/scripts/pride_flags.yaml
+++ b/scripts/pride_flags.yaml
@@ -2,7 +2,7 @@
   colors:
     - '#595959'
   default: true
-- name: Rainbow Pride Flag
+- name: LGBT+ Pride
   colors:
     - '#f00000'
     - '#ff8000'
@@ -10,19 +10,9 @@
     - '#007940'
     - '#4040ff'
     - '#a000c0'
-- name: "Philadelphia's People of Color Inclusive Flag"
-  colors:
-    - '#000000'
-    - '#72501e'
-    - '#d12d1f'
-    - '#ef9236'
-    - '#fced4f'
-    - '#3a7f30'
-    - '#1c50f6'
-    - '#6b1783'
 - name: Asexual
   colors:
-    - '#000000'
+    - '#010001'
     - '#a3a3a3'
     - '#ffffff'
     - '#800080'
@@ -38,15 +28,32 @@
     - '#e93d8c'
     - '#f9da49'
     - '#55b1f9'
+- name: Sapphic
+  colors:
+    - '#fe8ba8'
+    - '#fbf1ff'
+    - '#fe8ba8'
+- name: Pluralian
+  colors:
+    - '#7f39eb'
+    - '#fbf1ff'
+    - '#7f39eb'
 - name: Lesbian
   colors:
-    - '#c33d1e'
-    - '#df7c3d'
-    - '#f19e63'
+    - '#d72d01'
+    - '#ff9957'
     - '#ffffff'
-    - '#c269a2'
-    - '#a85c8e'
-    - '#951f60'
+    - '#d462a6'
+    - '#a40163'
+- name: Gay Men
+  colors:
+    - '#007071'
+    - '#01c192'
+    - '#74fe9b'
+    - '#ffffff'
+    - '#91fcf0'
+    - '#1878ff'
+    - '#0e184d'
 - name: Progress
   colors:
     - '#c32b1f'
@@ -60,24 +67,69 @@
     - '#f498c0'
     - '#7cc0ea'
     - '#603917'
-    - '#000000'
+    - '#010001'
 - name: Demisexual
   colors:
     - '#ffffff'
     - '#d2d2d2'
   triangle:
-    - '#000000'
+    - '#010001'
   line: '#67236d'
-- name: Polyamory
+- name: Achillean
   colors:
-    - '#204d9b'
-    - '#e52322'
-    - '#000000'
+    - '#9ac5ec'
+    - '#ffffff'
+    - '#9ac5ec'
+- name: Androphillia
+  colors:
+    - '#010001'
+    - '#ffffff'
+    - '#ffffff'
+    - '#007f01'
+- name: Gynephilia
+  colors:
+    - '#010001'
+    - '#ffffff'
+    - '#ffffff'
+    - '#ff0077'
 - name: Polysexual
   colors:
     - '#c84793'
     - '#4bb166'
     - '#4288c8'
-- name: Intersex
+- name: Omni
   colors:
-    - '#fed800'
+    - '#ff9ace'
+    - '#ff52bf'
+    - '#270047'
+    - '#675dff'
+    - '#8da5ff'
+- name: Queer
+  colors:
+    - '#010001'
+    - '#9cd8ec'
+    - '#02a3ea'
+    - '#b6e51f'
+    - '#ffffff'
+    - '#ffc90e'
+    - '#fd6667'
+    - '#ffaecb'
+    - '#010001'
+- name: Questioning
+  colors:
+    - '#ee7331'
+    - '#f5ea26'
+    - '#55b048'
+    - '#4b63ae'
+- name: Diamoric
+  colors:
+    - '#91f292'
+    - '#ffffff'
+    - '#91f292'
+- name: Greysexual
+  colors:
+    - '#6a0c80'
+    - '#a595a7'
+    - '#f0dff2'
+    - '#a595a7'
+    - '#6a0c80'
