add select2 add download

--- a/_data/dependencies.yml
+++ b/_data/dependencies.yml
@@ -8,3 +8,5 @@
   link: https://github.com/FortAwesome/Font-Awesome
 - name: PixiJS
   link: https://www.pixijs.com/
+- name: select2
+  link: https://select2.org/
