--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@ttskch/select2-bootstrap4-theme": "^1.3.4",
     "bootstrap": "^4.5.2",
     "bootstrap-toggle": "^2.2.2",
     "debug": "^4.3.1",
@@ -21,6 +22,7 @@
     "jquery-ui": "^1.12.1",
     "localforage": "^1.9.0",
     "pixi.js": "^5.3.6",
+    "select2": "^4.0.13",
     "typescript-logger": "^2.0.1"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/jquery": "^3.5.5",
     "@types/jqueryui": "^1.12.13",
     "@types/node": "^14.14.10",
+    "@types/select2": "^4.0.53",
     "browser-pack-flat": "^3.4.2",
     "browserify": "^16.5.2",
     "common-shakeify": "^0.6.2",
