--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "browserify src/main.ts -p [ tsify ] -t [ envify --NODE_ENV production ] -t unassertify -t uglifyify -p common-shakeify | uglifyjs -cm > ./assets/js/app/bundle.min.js",
     "build-dev": "browserify src/main.ts --debug -p [ tsify ] -t [ envify --NODE_ENV development ] | exorcist ./assets/js/app/bundle.js.map > ./assets/js/app/bundle.js",
-    "start": "bundle exec jekyll serve"
+    "start": "bundle exec jekyll serve",
+    "start-prod": "JEKYLL_ENV=production bundle exec jekyll serve"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
