--- a/_data/dependencies.yml
+++ b/_data/dependencies.yml
@@ -10,3 +10,5 @@
   link: https://www.pixijs.com/
 - name: select2
   link: https://select2.org/
+- name: PIXIJS Grid
+  link: https://github.com/LAG1996/pixijs-grid
