--- a/_data/flags.yml
+++ b/_data/flags.yml
@@ -1,4 +1,5 @@
-- colors:
+- category: pride
+  colors:
   - '#595959'
   default: true
   filename: assets/img/flags/none/none.png
@@ -9,7 +10,8 @@
     512w: assets/img/flags/none/none-16x.png
     64w: assets/img/flags/none/none-2x.png
   name: None
-- colors:
+- category: pride
+  colors:
   - '#010101'
   filename: assets/img/flags/mask/mask.png
   filename_set:
@@ -20,7 +22,8 @@
     64w: assets/img/flags/mask/mask-2x.png
   mask: true
   name: Mask
-- colors:
+- category: pride
+  colors:
   - '#f00000'
   - '#ff8000'
   - '#ffff00'
@@ -36,7 +39,8 @@
     96w: assets/img/flags/lgbt_pride/lgbt_pride-2x.png
   link: https://en.wikipedia.org/wiki/Rainbow_flag_(LGBT)
   name: LGBT+ Pride
-- colors:
+- category: pride
+  colors:
   - '#fe8ba8'
   - '#fbf1ff'
   - '#fe8ba8'
@@ -49,7 +53,8 @@
     96w: assets/img/flags/sapphic/sapphic-2x.png
   link: https://lgbta.wikia.org/wiki/Sapphic
   name: Sapphic
-- colors:
+- category: pride
+  colors:
   - '#7f39eb'
   - '#fbf1ff'
   - '#7f39eb'
@@ -62,7 +67,8 @@
     96w: assets/img/flags/pluralian/pluralian-2x.png
   link: https://lgbta.wikia.org/wiki/Pluralian
   name: Pluralian
-- colors:
+- category: pride
+  colors:
   - '#c32b1f'
   - '#e2a037'
   - '#e9fd52'
@@ -83,7 +89,8 @@
   - '#7cc0ea'
   - '#603917'
   - '#010001'
-- colors:
+- category: pride
+  colors:
   - '#9ac5ec'
   - '#ffffff'
   - '#9ac5ec'
@@ -96,7 +103,8 @@
     96w: assets/img/flags/achillean/achillean-2x.png
   link: https://lgbta.wikia.org/wiki/Achillean
   name: Achillean
-- colors:
+- category: pride
+  colors:
   - '#010001'
   - '#ffffff'
   - '#ffffff'
@@ -109,7 +117,8 @@
     512w: assets/img/flags/androphillia/androphillia-8x.png
     64w: assets/img/flags/androphillia/androphillia.png
   name: Androphillia
-- colors:
+- category: pride
+  colors:
   - '#010001'
   - '#ffffff'
   - '#ffffff'
@@ -122,7 +131,8 @@
     512w: assets/img/flags/gynephilia/gynephilia-8x.png
     64w: assets/img/flags/gynephilia/gynephilia.png
   name: Gynephilia
-- colors:
+- category: pride
+  colors:
   - '#010001'
   - '#9cd8ec'
   - '#02a3ea'
@@ -141,7 +151,8 @@
     72w: assets/img/flags/queer/queer.png
   link: https://lgbta.wikia.org/wiki/Queer
   name: Queer
-- colors:
+- category: pride
+  colors:
   - '#ee7331'
   - '#f5ea26'
   - '#55b048'
@@ -155,7 +166,8 @@
     64w: assets/img/flags/questioning/questioning.png
   link: https://lgbta.wikia.org/wiki/Questioning
   name: Questioning
-- colors:
+- category: pride
+  colors:
   - '#91f292'
   - '#ffffff'
   - '#91f292'
@@ -168,7 +180,8 @@
     96w: assets/img/flags/diamoric/diamoric-2x.png
   link: https://lgbta.wikia.org/wiki/Diamoric
   name: Diamoric
-- colors:
+- category: sexual
+  colors:
   - '#010001'
   - '#a3a3a3'
   - '#ffffff'
@@ -182,7 +195,8 @@
     64w: assets/img/flags/asexual/asexual.png
   link: https://lgbta.wikia.org/wiki/Asexual
   name: Asexual
-- colors:
+- category: sexual
+  colors:
   - '#d60270'
   - '#d60270'
   - '#9b4f96'
@@ -197,7 +211,8 @@
     80w: assets/img/flags/bisexual/bisexual-2x.png
   link: https://lgbta.wikia.org/wiki/Bisexual
   name: Bisexual
-- colors:
+- category: sexual
+  colors:
   - '#e93d8c'
   - '#f9da49'
   - '#55b1f9'
@@ -210,7 +225,8 @@
     96w: assets/img/flags/pansexual/pansexual-2x.png
   link: https://lgbta.wikia.org/wiki/Pansexual
   name: Pansexual
-- colors:
+- category: sexual
+  colors:
   - '#d72d01'
   - '#ff9957'
   - '#ffffff'
@@ -225,7 +241,8 @@
     80w: assets/img/flags/lesbian/lesbian-2x.png
   link: https://lgbta.wikia.org/wiki/Lesbian
   name: Lesbian
-- colors:
+- category: sexual
+  colors:
   - '#007071'
   - '#01c192'
   - '#74fe9b'
@@ -242,7 +259,8 @@
     896w: assets/img/flags/gay_men/gay_men-16x.png
   link: https://lgbta.wikia.org/wiki/Vincian
   name: Gay Men
-- colors:
+- category: sexual
+  colors:
   - '#ffffff'
   - '#d2d2d2'
   filename: assets/img/flags/demisexual/demisexual.png
@@ -257,7 +275,8 @@
   name: Demisexual
   triangle:
   - '#010001'
-- colors:
+- category: sexual
+  colors:
   - '#c84793'
   - '#4bb166'
   - '#4288c8'
@@ -270,7 +289,8 @@
     96w: assets/img/flags/polysexual/polysexual-2x.png
   link: https://lgbta.wikia.org/wiki/Polysexual
   name: Polysexual
-- colors:
+- category: sexual
+  colors:
   - '#6a0c80'
   - '#a595a7'
   - '#f0dff2'
@@ -285,7 +305,8 @@
     80w: assets/img/flags/greysexual/greysexual-2x.png
   link: https://lgbta.wikia.org/wiki/Greyasexual
   name: Greysexual
-- colors:
+- category: sexual
+  colors:
   - '#9adbec'
   - '#7b7e7b'
   filename: assets/img/flags/autosexual/autosexual.png
@@ -297,7 +318,8 @@
     96w: assets/img/flags/autosexual/autosexual-2x.png
   link: https://lgbta.wikia.org/wiki/Autosexual
   name: Autosexual
-- colors:
+- category: sexual
+  colors:
   - '#01ccff'
   - '#603524'
   - '#b799de'
@@ -310,7 +332,8 @@
     96w: assets/img/flags/androsexual/androsexual-2x.png
   link: https://lgbta.wikia.org/wiki/Androsexual
   name: Androsexual
-- colors:
+- category: sexual
+  colors:
   - '#801ca4'
   - '#8040a5'
   - '#7e4db4'
@@ -327,7 +350,8 @@
     896w: assets/img/flags/myrsexual/myrsexual-16x.png
   link: https://lgbta.wikia.org/wiki/Myrsexual
   name: Myrsexual
-- colors:
+- category: sexual
+  colors:
   - '#ff9ace'
   - '#ff52bf'
   - '#270047'
@@ -342,7 +366,8 @@
     80w: assets/img/flags/omnisexual/omnisexual-2x.png
   link: https://lgbta.wikia.org/wiki/Omnisexual
   name: Omnisexual
-- colors:
+- category: gender
+  colors:
   - '#010001'
   - '#b9b9b9'
   - '#FFFFFF'
@@ -359,7 +384,8 @@
     896w: assets/img/flags/agender/agender-16x.png
   link: https://lgbta.wikia.org/wiki/Agender
   name: Agender
-- colors:
+- category: gender
+  colors:
   - '#9b979e'
   - '#9b979e'
   - '#6f74c4'
@@ -376,7 +402,8 @@
     896w: assets/img/flags/androgynous/androgynous-16x.png
   link: https://lgbta.wikia.org/wiki/Androgynous
   name: Androgynous
-- colors:
+- category: gender
+  colors:
   - '#7ccdf6'
   - '#eaaeba'
   - '#ffffff'
@@ -391,7 +418,8 @@
     80w: assets/img/flags/transgender/transgender-2x.png
   link: https://lgbta.wikia.org/wiki/Transgender
   name: Transgender
-- colors:
+- category: gender
+  colors:
   - '#b39bd9'
   - '#ffffff'
   - '#738d46'
@@ -404,7 +432,8 @@
     96w: assets/img/flags/genderqueer/genderqueer-2x.png
   link: https://lgbta.wikia.org/wiki/Genderqueer
   name: Genderqueer
-- colors:
+- category: gender
+  colors:
   - '#ed7ea3'
   - '#ffffff'
   - '#af30d0'
@@ -419,7 +448,8 @@
     80w: assets/img/flags/genderfluid/genderfluid-2x.png
   link: https://lgbta.wikia.org/wiki/Genderfluid
   name: Genderfluid
-- colors:
+- category: gender
+  colors:
   - '#fdf35e'
   - '#ffffff'
   - '#915fc9'
@@ -433,7 +463,8 @@
     64w: assets/img/flags/non_binary/non_binary.png
   link: https://lgbta.wikia.org/wiki/Non-Binary
   name: Non-Binary
-- colors:
+- category: gender
+  colors:
   - '#7e7f7f'
   - '#c5c3c4'
   - '#fdff75'
@@ -450,7 +481,8 @@
     896w: assets/img/flags/demigender/demigender-16x.png
   link: https://lgbta.wikia.org/wiki/Demigender
   name: Demigender
-- colors:
+- category: gender
+  colors:
   - '#7e7f7f'
   - '#c5c3c4'
   - '#9bd5e6'
@@ -467,7 +499,8 @@
     896w: assets/img/flags/demiboy/demiboy-16x.png
   link: https://lgbta.wikia.org/wiki/Demiboy
   name: Demiboy
-- colors:
+- category: gender
+  colors:
   - '#7e7f7f'
   - '#c5c3c4'
   - '#f4aec9'
@@ -484,7 +517,8 @@
     896w: assets/img/flags/demigirl/demigirl-16x.png
   link: https://lgbta.wikia.org/wiki/Demigirl
   name: Demigirl
-- colors:
+- category: gender
+  colors:
   - '#7e7f7f'
   - '#c5c3c4'
   - '#f4aec9'
@@ -501,7 +535,8 @@
     896w: assets/img/flags/demiflux/demiflux-16x.png
   link: https://lgbta.wikia.org/wiki/Demiflux
   name: Demiflux
-- colors:
+- category: gender
+  colors:
   - '#ffffff'
   - '#36ab4f'
   - '#010001'
@@ -514,7 +549,8 @@
     96w: assets/img/flags/neutrois/neutrois-2x.png
   link: https://lgbta.wikia.org/wiki/Neutrois
   name: Neutrois
-- colors:
+- category: gender
+  colors:
   - '#f43a61'
   - '#5e9dfb'
   - '#c95efc'
@@ -532,7 +568,8 @@
     64w: assets/img/flags/pangender/pangender.png
   link: https://lgbta.wikia.org/wiki/Pangender
   name: Pangender
-- colors:
+- category: gender
+  colors:
   - '#c479a0'
   - '#eda5cb'
   - '#d6c7e7'
@@ -549,7 +586,8 @@
     896w: assets/img/flags/bigender/bigender-16x.png
   link: https://lgbta.wikia.org/wiki/Bigender
   name: Bigender
-- colors:
+- category: gender
+  colors:
   - '#010001'
   - '#949294'
   - '#ed93c6'
@@ -564,7 +602,8 @@
     80w: assets/img/flags/polygender/polygender-2x.png
   link: https://lgbta.wikia.org/wiki/Polygender
   name: Polygender
-- colors:
+- category: gender
+  colors:
   - '#7d04ec'
   - '#01eedd'
   - '#5400d3'
@@ -578,7 +617,8 @@
     64w: assets/img/flags/alexigender/alexigender.png
   link: https://lgbta.wikia.org/wiki/Alexigender
   name: Alexigender
-- colors:
+- category: gender
+  colors:
   - '#f3759c'
   - '#ffffff'
   - '#8b4e9f'
@@ -593,7 +633,8 @@
     80w: assets/img/flags/genderfluid/genderfluid-2x.png
   link: https://lgbta.wikia.org/wiki/Genderfluid
   name: Genderfluid
-- colors:
+- category: gender
+  colors:
   - '#ff98bd'
   - '#ff98bd'
   - '#f96493'
@@ -615,7 +656,8 @@
     96w: assets/img/flags/gender_questioning/gender_questioning.png
   link: https://nonbinary.wiki/wiki/Questioning
   name: Gender Questioning
-- circle: '#7902ac'
+- category: gender
+  circle: '#7902ac'
   colors:
   - '#fed800'
   filename: assets/img/flags/intersex/intersex.png
@@ -627,7 +669,8 @@
     64w: assets/img/flags/intersex/intersex-2x.png
   link: https://lgbta.wikia.org/wiki/Intersex
   name: Intersex
-- colors:
+- category: gender
+  colors:
   - '#fef333'
   - '#ffffff'
   - '#f39622'
@@ -640,7 +683,8 @@
     96w: assets/img/flags/maverique/maverique-2x.png
   link: https://lgbta.wikia.org/wiki/Maverique
   name: Maverique
-- colors:
+- category: gender
+  colors:
   - '#ff94c5'
   - '#9680ff'
   - '#68d867'
@@ -655,7 +699,8 @@
     80w: assets/img/flags/trigender/trigender-2x.png
   link: https://lgbta.wikia.org/wiki/Trigender
   name: Trigender
-- colors:
+- category: relationship
+  colors:
   - '#204d9b'
   - '#e52322'
   - '#010001'
@@ -668,7 +713,8 @@
     96w: assets/img/flags/polyamory/polyamory-2x.png
   link: https://lgbta.wikia.org/wiki/Polyamorous
   name: Polyamory
-- colors:
+- category: relationship
+  colors:
   - '#71ee72'
   - '#c4c4c4'
   - '#ffbc51'
@@ -681,7 +727,8 @@
     96w: assets/img/flags/open_relationship/open_relationship-2x.png
   link: https://lgbta.wikia.org/wiki/Open_Relationship
   name: Open Relationship
-- colors:
+- category: relationship
+  colors:
   - '#acacac'
   - '#ac6bb9'
   - '#ee444c'
@@ -696,7 +743,8 @@
     80w: assets/img/flags/triad/triad-2x.png
   link: https://lgbta.wikia.org/wiki/Triad
   name: Triad
-- colors:
+- category: relationship
+  colors:
   - '#010180'
   - '#00dbd3'
   - '#ff966e'
@@ -710,7 +758,8 @@
     64w: assets/img/flags/quad/quad.png
   link: https://lgbta.wikia.org/wiki/Quad_Polyamory
   name: Quad
-- colors:
+- category: relationship
+  colors:
   - '#ff9670'
   - '#ff4a35'
   - '#010180'
@@ -724,7 +773,8 @@
     64w: assets/img/flags/n_polyamory/n_polyamory.png
   link: https://lgbta.wikia.org/wiki/N_Polyamory
   name: N Polyamory
-- colors:
+- category: relationship
+  colors:
   - '#41fefe'
   - '#010001'
   - '#6466ff'
@@ -737,7 +787,8 @@
     96w: assets/img/flags/geographically_non_monogamy/geographically_non_monogamy-2x.png
   link: https://lgbta.wikia.org/wiki/Geographically_Non-Monogamy
   name: Geographically Non-Monogamy
-- colors:
+- category: relationship
+  colors:
   - '#ee444c'
   - '#acacac'
   - '#ac6bb9'
@@ -752,7 +803,8 @@
     80w: assets/img/flags/v_polyamory/v_polyamory-2x.png
   link: https://lgbta.wikia.org/wiki/V_Polyamory
   name: V Polyamory
-- colors:
+- category: relationship
+  colors:
   - '#ac6bb9'
   - '#ee444c'
   - '#acacac'
@@ -767,7 +819,8 @@
     80w: assets/img/flags/t_polyamory/t_polyamory-2x.png
   link: https://lgbta.wikia.org/wiki/T_Polyamory
   name: T Polyamory
-- colors:
+- category: relationship
+  colors:
   - '#e4e459'
   - '#c79461'
   - '#962fdb'
@@ -780,7 +833,8 @@
     96w: assets/img/flags/polyfidelity/polyfidelity-2x.png
   link: https://lgbta.wikia.org/wiki/Polyfidelity
   name: Polyfidelity
-- colors:
+- category: relationship
+  colors:
   - '#ffffff'
   - '#ec1b24'
   - '#ff3999'
@@ -794,7 +848,8 @@
     64w: assets/img/flags/monogamy/monogamy.png
   link: https://lgbta.wikia.org/wiki/Monogamy
   name: Monogamy
-- colors:
+- category: relationship
+  colors:
   - '#010001'
   - '#ac6bb9'
   - '#acacac'
@@ -813,7 +868,8 @@
     72w: assets/img/flags/pluriad/pluriad.png
   link: https://lgbta.wikia.org/wiki/Pluriad
   name: Pluriad
-- colors:
+- category: relationship
+  colors:
   - '#794da3'
   - '#ee89d2'
   - '#f4cc75'
@@ -826,7 +882,8 @@
     96w: assets/img/flags/nonamorous/nonamorous-2x.png
   link: https://lgbta.wikia.org/wiki/Nonamorous
   name: Nonamorous
-- colors:
+- category: relationship
+  colors:
   - '#f3001b'
   - '#d42adc'
   - '#63459a'
@@ -841,7 +898,8 @@
     80w: assets/img/flags/biamorous/biamorous-2x.png
   link: https://lgbta.wikia.org/wiki/Biamorous
   name: Biamorous
-- colors:
+- category: relationship
+  colors:
   - '#0d75e8'
   - '#0bde69'
   - '#e8e831'
@@ -856,7 +914,8 @@
     80w: assets/img/flags/plurian/plurian-2x.png
   link: https://lgbta.wikia.org/wiki/Plurian
   name: Plurian
-- colors:
+- category: romantic
+  colors:
   - '#08360a'
   - '#2f9f39'
   - '#ffffff'
@@ -871,7 +930,8 @@
     80w: assets/img/flags/aromantic/aromantic-2x.png
   link: https://lgbta.wikia.org/wiki/Aromantic
   name: Aromantic
-- colors:
+- category: romantic
+  colors:
   - '#ffffff'
   - '#d2d2d2'
   filename: assets/img/flags/demiromantic/demiromantic.png
@@ -886,7 +946,8 @@
   name: Demiromantic
   triangle:
   - '#010001'
-- colors:
+- category: romantic
+  colors:
   - '#93d2e4'
   - '#3ea442'
   - '#7b7b7b'
@@ -899,7 +960,8 @@
     96w: assets/img/flags/autoromantic/autoromantic-2x.png
   link: https://lgbta.wikia.org/wiki/Autoromantic
   name: Autoromantic
-- colors:
+- category: romantic
+  colors:
   - '#ffffff'
   - '#80cfe1'
   - '#81b2e1'
@@ -914,7 +976,8 @@
     80w: assets/img/flags/andromantic/andromantic-2x.png
   link: https://lgbta.wikia.org/wiki/Andromantic
   name: Andromantic
-- colors:
+- category: romantic
+  colors:
   - '#69ff76'
   - '#69c576'
   - '#6aab75'
@@ -931,7 +994,8 @@
     896w: assets/img/flags/myrromantic/myrromantic-16x.png
   link: https://lgbta.wikia.org/wiki/Myrromantic
   name: Myrromantic
-- colors:
+- category: sub_culture
+  colors:
   - '#000000'
   - '#72501e'
   - '#d12d1f'
@@ -949,7 +1013,8 @@
     64w: assets/img/flags/people_of_color_pride/people_of_color_pride.png
   link: https://en.wikipedia.org/wiki/Rainbow_flag_(LGBT)
   name: People of Color Pride
-- colors:
+- category: sub_culture
+  colors:
   - '#c33d1e'
   - '#df7c3d'
   - '#f19e63'
@@ -966,7 +1031,8 @@
     896w: assets/img/flags/lipstick_lesbian/lipstick_lesbian-16x.png
   link: https://lgbta.wikia.org/wiki/Lesbian
   name: Lipstick Lesbian
-- colors:
+- category: sub_culture
+  colors:
   - '#364071'
   - '#6c78a6'
   - '#8b91a8'
@@ -983,7 +1049,8 @@
     896w: assets/img/flags/butch_lesbian/butch_lesbian-16x.png
   link: https://lgbta.wikia.org/wiki/Lesbian
   name: Butch Lesbian
-- colors:
+- category: sub_culture
+  colors:
   - '#643806'
   - '#d66301'
   - '#fedd64'
@@ -1001,7 +1068,8 @@
     64w: assets/img/flags/bears/bears.png
   link: https://lgbta.wikia.org/wiki/Bear
   name: Bears
-- colors:
+- category: sub_culture
+  colors:
   - '#6ec5fe'
   - '#9cd7fc'
   - '#ffffff'
@@ -1016,7 +1084,8 @@
     80w: assets/img/flags/otters/otters-2x.png
   link: https://lgbta.wikia.org/wiki/Otter
   name: Otters
-- colors:
+- category: sub_culture
+  colors:
   - '#ffb1ff'
   - '#ffffff'
   - '#ffff80'
@@ -1029,7 +1098,8 @@
     96w: assets/img/flags/twinks/twinks-2x.png
   link: https://lgbta.wikia.org/wiki/Twink
   name: Twinks
-- colors:
+- category: sub_culture
+  colors:
   - '#010001'
   - '#246b3a'
   - '#269025'
@@ -1042,7 +1112,8 @@
     512w: assets/img/flags/military/military-8x.png
     64w: assets/img/flags/military/military.png
   name: Military
-- colors:
+- category: sub_culture
+  colors:
   - '#050b08'
   - '#e36482'
   - '#faf6c2'
@@ -1056,7 +1127,8 @@
     640w: assets/img/flags/fat_chubby/fat_chubby-16x.png
     80w: assets/img/flags/fat_chubby/fat_chubby-2x.png
   name: Fat/Chubby
-- colors:
+- category: sub_culture
+  colors:
   - '#010001'
   - '#0a235c'
   - '#010001'
@@ -1074,7 +1146,8 @@
     576w: assets/img/flags/poz/poz-8x.png
     72w: assets/img/flags/poz/poz.png
   name: Poz
-- colors:
+- category: sub_culture
+  colors:
   - '#010001'
   - '#2b297f'
   - '#010001'
@@ -1093,7 +1166,8 @@
     72w: assets/img/flags/leather_fetish/leather_fetish.png
   link: https://lgbt.wikia.org/wiki/Leather_Pride_flag
   name: Leather/Fetish
-- colors:
+- category: sub_culture
+  colors:
   - '#313e83'
   - '#6c35a9'
   - '#3fc5ec'
