--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "debug": "^4.3.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
+    "list.js": "^2.3.0",
     "localforage": "^1.9.0",
+    "memory-cache": "^0.2.0",
     "pixi.js": "^5.3.6",
     "pixijs-grid": "^0.4.1",
     "select2": "^4.0.13",
@@ -34,6 +36,8 @@
     "@types/envify": "0.0.30",
     "@types/jquery": "^3.5.5",
     "@types/jqueryui": "^1.12.13",
+    "@types/list.js": "^1.5.6",
+    "@types/memory-cache": "^0.2.1",
     "@types/node": "^14.14.10",
     "@types/select2": "^4.0.53",
     "browser-pack-flat": "^3.4.2",
