--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -33,6 +33,7 @@ flag_info:
     description: >-
       No Info.
   source_label: '[Source]'
+  pagination_label: Flag List page navigation
 orientation:
   horizontal: Horizontal
   vertical: Vertical
