--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -20,7 +20,7 @@ select_parts:
 parts_list:
   pagination_label: Part page navigation
   search_label: Flag Search
-  show_whole_label: Show This Part
+  show_whole_label: Replace all parts
   filter_label: Filter Flags
 sprite:
   download: Download
