--- a/_data/sprites.yml
+++ b/_data/sprites.yml
@@ -23686,6 +23686,7 @@
     x: 0
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_0_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_0_craws.png
   mask_key: _horizontal_0_craws
   orientation: horizontal
@@ -23713,6 +23714,7 @@
     x: 22
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_1_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_1_craws.png
   mask_key: _horizontal_1_craws
   orientation: horizontal
@@ -23740,6 +23742,7 @@
     x: 44
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_2_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_2_craws.png
   mask_key: _horizontal_2_craws
   orientation: horizontal
@@ -23767,6 +23770,7 @@
     x: 66
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_3_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_3_craws.png
   mask_key: _horizontal_3_craws
   orientation: horizontal
@@ -23794,10 +23798,39 @@
     x: 88
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_4_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_4_craws.png
   mask_key: _horizontal_4_craws
   orientation: horizontal
   part: center
+  rotated: false
+  sheet: assets/img/sprites/craws_paw.json
+  sourceSize:
+    h: 22
+    w: 22
+  spriteSourceSize:
+    h: 22
+    w: 22
+    x: 0
+    y: 0
+  trimmed: false
+- category: craws
+  craws: true
+  craws_key: _horizontal_5_craws
+  filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_5_craws.png
+  flag_name: Mask
+  form: paw
+  frame:
+    h: 22
+    w: 22
+    x: 110
+    y: 0
+  id: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_5_craws.png
+  mask: true
+  mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_horizontal_5_craws.png
+  mask_key: _horizontal_5_craws
+  orientation: horizontal
+  part: whole
   rotated: false
   sheet: assets/img/sprites/craws_paw.json
   sourceSize:
@@ -23818,9 +23851,10 @@
   frame:
     h: 22
     w: 22
-    x: 110
+    x: 132
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_0_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_0_craws.png
   mask_key: _vertical_0_craws
   orientation: vertical
@@ -23845,9 +23879,10 @@
   frame:
     h: 22
     w: 22
-    x: 132
+    x: 154
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_1_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_1_craws.png
   mask_key: _vertical_1_craws
   orientation: vertical
@@ -23872,9 +23907,10 @@
   frame:
     h: 22
     w: 22
-    x: 154
+    x: 176
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_2_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_2_craws.png
   mask_key: _vertical_2_craws
   orientation: vertical
@@ -23899,9 +23935,10 @@
   frame:
     h: 22
     w: 22
-    x: 176
+    x: 198
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_3_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_3_craws.png
   mask_key: _vertical_3_craws
   orientation: vertical
@@ -23926,13 +23963,42 @@
   frame:
     h: 22
     w: 22
-    x: 198
+    x: 220
     y: 0
   id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_4_craws.png
+  mask: true
   mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_4_craws.png
   mask_key: _vertical_4_craws
   orientation: vertical
   part: center
+  rotated: false
+  sheet: assets/img/sprites/craws_paw.json
+  sourceSize:
+    h: 22
+    w: 22
+  spriteSourceSize:
+    h: 22
+    w: 22
+    x: 0
+    y: 0
+  trimmed: false
+- category: craws
+  craws: true
+  craws_key: _vertical_5_craws
+  filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_5_craws.png
+  flag_name: Mask
+  form: paw
+  frame:
+    h: 22
+    w: 22
+    x: 242
+    y: 0
+  id: assets/img/sprites/craws_paw/craws_paw_mask_vertical_5_craws.png
+  mask: true
+  mask_filename: assets/img/sprites/craws_paw/craws_paw_mask_vertical_5_craws.png
+  mask_key: _vertical_5_craws
+  orientation: vertical
+  part: whole
   rotated: false
   sheet: assets/img/sprites/craws_paw.json
   sourceSize:
@@ -23954,6 +24020,7 @@
     x: 0
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_0_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_0_outlines.png
   mask_key: _horizontal_0_outlines
   orientation: horizontal
@@ -23981,6 +24048,7 @@
     x: 22
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_1_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_1_outlines.png
   mask_key: _horizontal_1_outlines
   orientation: horizontal
@@ -24008,6 +24076,7 @@
     x: 44
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_2_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_2_outlines.png
   mask_key: _horizontal_2_outlines
   orientation: horizontal
@@ -24035,6 +24104,7 @@
     x: 66
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_3_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_3_outlines.png
   mask_key: _horizontal_3_outlines
   orientation: horizontal
@@ -24062,6 +24132,7 @@
     x: 88
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_4_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_4_outlines.png
   mask_key: _horizontal_4_outlines
   orientation: horizontal
@@ -24080,7 +24151,7 @@
     y: 0
   trimmed: false
 - category: outlines
-  filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_0_outlines.png
+  filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_5_outlines.png
   flag_name: Mask
   form: paw
   frame:
@@ -24088,7 +24159,36 @@
     w: 22
     x: 110
     y: 0
+  id: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_5_outlines.png
+  mask: true
+  mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_horizontal_5_outlines.png
+  mask_key: _horizontal_5_outlines
+  orientation: horizontal
+  outlines: true
+  outlines_key: _horizontal_5_outlines
+  part: whole
+  rotated: false
+  sheet: assets/img/sprites/outlines_paw.json
+  sourceSize:
+    h: 22
+    w: 22
+  spriteSourceSize:
+    h: 22
+    w: 22
+    x: 0
+    y: 0
+  trimmed: false
+- category: outlines
+  filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_0_outlines.png
+  flag_name: Mask
+  form: paw
+  frame:
+    h: 22
+    w: 22
+    x: 132
+    y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_0_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_0_outlines.png
   mask_key: _vertical_0_outlines
   orientation: vertical
@@ -24113,9 +24213,10 @@
   frame:
     h: 22
     w: 22
-    x: 132
+    x: 154
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_1_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_1_outlines.png
   mask_key: _vertical_1_outlines
   orientation: vertical
@@ -24140,9 +24241,10 @@
   frame:
     h: 22
     w: 22
-    x: 154
+    x: 176
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_2_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_2_outlines.png
   mask_key: _vertical_2_outlines
   orientation: vertical
@@ -24167,9 +24269,10 @@
   frame:
     h: 22
     w: 22
-    x: 176
+    x: 198
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_3_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_3_outlines.png
   mask_key: _vertical_3_outlines
   orientation: vertical
@@ -24194,15 +24297,44 @@
   frame:
     h: 22
     w: 22
-    x: 198
+    x: 220
     y: 0
   id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_4_outlines.png
+  mask: true
   mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_4_outlines.png
   mask_key: _vertical_4_outlines
   orientation: vertical
   outlines: true
   outlines_key: _vertical_4_outlines
   part: center
+  rotated: false
+  sheet: assets/img/sprites/outlines_paw.json
+  sourceSize:
+    h: 22
+    w: 22
+  spriteSourceSize:
+    h: 22
+    w: 22
+    x: 0
+    y: 0
+  trimmed: false
+- category: outlines
+  filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_5_outlines.png
+  flag_name: Mask
+  form: paw
+  frame:
+    h: 22
+    w: 22
+    x: 242
+    y: 0
+  id: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_5_outlines.png
+  mask: true
+  mask_filename: assets/img/sprites/outlines_paw/outlines_paw_mask_vertical_5_outlines.png
+  mask_key: _vertical_5_outlines
+  orientation: vertical
+  outlines: true
+  outlines_key: _vertical_5_outlines
+  part: whole
   rotated: false
   sheet: assets/img/sprites/outlines_paw.json
   sourceSize:
